correction de la boucle de jeu, démarrage des test pcvspc
Signed-off-by: unknown <Samy@Ordinatueur.(none)>

--- a/options.cfg
+++ b/options.cfg
@@ -1,17 +1,7 @@
-<<<<<<< HEAD
 width = 800
 height = 650
 style = 1
-deck = 1
-voitCartes = true
-voitPlis = true
-son = true
-=======
-width = 800
-height = 650
-style = 1
-deck = 1
-voitCartes = true
+deck = 2
+voitCartes = false
 voitPlis = false
 son = false
->>>>>>> 5e7d8e0695c50a9149f52bd55feefc56800df7d7
